Update TOS/index.html with new content

--- a/TOS/index.html
+++ b/TOS/index.html
@@ -250,7 +250,7 @@
     <button class="back-btn" onclick="document.getElementById('adminPanel').style.display='none'">← Back</button>
     <h2>Admin Panel</h2>
     <div style="max-width:600px;margin:0 auto;">
-      <input type="password" id="adminPass" placeholder="Password (default: uncle123)" />
+      <input type="password" id="adminPass" placeholder="Enter Password" />
       <button onclick="checkPassword()">Login</button>
       <div id="postForm" style="display:none;">
         <input type="text" id="title" placeholder="Title" />
@@ -367,6 +367,7 @@
   </script>
 </body>
 </html>
+
 
 
 
